# vscode-languageserver-rust

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: extension.ts
server/: Cargo.toml
server-rust/: Cargo.toml
server-rust/src/: server.rs
server/src/: server.rs  server.ts
server/src/methods/textDocument/: completion.ts  didChange.ts
src/: client.rs  server.rs
