[package]
name = "lsp-example-rust"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.213", features = [ "derive" ]}
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = [ "full" ]}
tracing-subscriber = "0.3.18"
tower-lsp = "0.20.0"
rust-analyzer = "0.0.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
